[gd_scene load_steps=7 format=3 uid="uid://c8r5h2gcuaga"]

[ext_resource type="FontFile" uid="uid://5yg3f0r12k0l" path="res://UIAssets/roundfont.ttf" id="1_5lqjm"]
[ext_resource type="Script" path="res://Scenes/leaderboard.gd" id="1_ht8ey"]
[ext_resource type="PackedScene" uid="uid://bqhf7j1uw4c5p" path="res://UIAssets/loading_wheel.tscn" id="3_tqc3k"]

[sub_resource type="LabelSettings" id="LabelSettings_1gqg3"]
font = ExtResource("1_5lqjm")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_n5o4o"]
font = ExtResource("1_5lqjm")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_rwu0m"]
font = ExtResource("1_5lqjm")
font_size = 26

[node name="leaderboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ht8ey")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 163.0
offset_top = 59.0
offset_right = -766.0
offset_bottom = -530.0
grow_horizontal = 2
grow_vertical = 2
text = "Top Scores"
label_settings = SubResource("LabelSettings_1gqg3")

[node name="Scoreboard" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 169.0
offset_top = 109.0
offset_right = -489.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoadingWheel" parent="." instance=ExtResource("3_tqc3k")]
visible = true
layout_mode = 1
anchors_preset = 8
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="FailureLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.5
offset_top = -13.0
offset_right = 119.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Failed to Retrieve Scores: Try Again"
label_settings = SubResource("LabelSettings_n5o4o")

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.944
anchor_right = 0.158
anchor_bottom = 1.0
offset_left = 182.0
offset_top = -33.712
offset_right = 170.984
offset_bottom = -36.0
grow_vertical = 0

[node name="Label" type="Label" parent="BackButton"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.965
anchor_bottom = 0.971
offset_left = 4.0
offset_top = 2.0
offset_right = 1.985
offset_bottom = -3.014
text = "Back"
label_settings = SubResource("LabelSettings_rwu0m")
horizontal_alignment = 1
vertical_alignment = 1
